--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -2,9 +2,10 @@ name: GitHub Actions Demo
 on: [push]
 jobs:
   Explore-GitHub-Actions:
+    default:
+      run:
+        working-directory: test/
     runs-on: ubuntu-latest
-    run:
-      working-directory: test/
     steps:
       - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
       - run: echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
